tests/fail/elaboration/unification/mismatch/arrow-param-type.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-param-type.fathom:3:34
  │
3 │ fun (A : Type) -> fun (a : A) -> a -> A
  │                                  ^ type mismatch, expected `A`, found `Type`
  │
  = expected `A`
       found `Type`

'''
